Add Markdown converter. Fix JS evaluation.

--- a/newmediology/templates/base.html
+++ b/newmediology/templates/base.html
@@ -20,6 +20,7 @@
     {% compress js %}
         <script type="text/javascript" src="{{ STATIC_URL }}javascripts/lib/modernizr.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}javascripts/lib/jquery.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}javascripts/lib/showdown.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}javascripts/app.js"></script>
     {% endcompress %}
 </body>
