--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -539,9 +539,9 @@ a:hover {
   overflow: auto;
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 #conversation #history li {
-  padding: 10px;
   border-top: 1px solid #000;
   position: relative;
   line-height: 1.4;
@@ -550,6 +550,9 @@ a:hover {
   font-weight: bold;
   position: absolute;
   left: 5px;
+}
+#conversation #history li .entry {
+  padding: 10px;
 }
 #conversation #history li.question {
   border-top-width: 2px;
