Add Fedra Sans font from typotheque.

--- a/newmediology/pages/templates/pages/default.html
+++ b/newmediology/pages/templates/pages/default.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
+        <link rel="stylesheet" href="http://wf.typotheque.com/WF-016878-001609" type="text/css" />
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}stylesheets/screen.css">
     </head>
     <body class="page">
