--- a/newmediology/templates/base.html
+++ b/newmediology/templates/base.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block site_name %}New Mediology{% endblock %}</title>
-    <link href="{{ STATIC_URL }}stylesheets/screen.css" media="screen, projection" rel="stylesheet" />
+    <link rel="stylesheet" href="http://wf.typotheque.com/WF-016878-001609" type="text/css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}stylesheets/screen.css" media="screen, projection" />
     <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}images/favicon.ico" />
     <link rel="icon" type="image/png" href="{{ STATIC_URL }}images/favicon.png" />
 </head>
